# png-average

./: .gitignore  CHANGELOG.md  LICENSE  README.md  png-average.cabal
app/: Main.hs
